--- a/views/auth/users/register.ejs
+++ b/views/auth/users/register.ejs
@@ -10,7 +10,7 @@
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
-<%- include('../../partials/navbar', {isAuth}) %>
+<%- include('../../users/partials/navbar', {isAuth}) %>
 
 
 <div class="container mt-4">
