--- a/views/auth/users/login.ejs
+++ b/views/auth/users/login.ejs
@@ -8,19 +8,36 @@
     <title>Register</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400&display=swap" rel="stylesheet">
+    <style>
+        * {
+            font-family: 'Poppins', sans-serif;
+        }
+    </style>
 </head>
 <body>
 <%- include('../../users/partials/navbar', {isAuth}) %>
 
 <div class="container mt-4">
     <% if(err){ %>
-    <div class="card m-auto mb-4" style="width: 50%">
-        <div class="card-body">
-            <ul>
-                <li class="text-danger"><%= err %></li>
-            </ul>
+        <div class="card m-auto mb-4" style="width: 50%">
+            <div class="card-body">
+                <ul>
+                    <li class="text-danger"><%= err %></li>
+                </ul>
+            </div>
         </div>
-    </div>
+    <% } %>
+    <% if(validation){ %>
+        <div class="card m-auto mb-4" style="width: 50%">
+            <div class="card-body">
+                <ul>
+                    <li class="text-success"><%= validation %></li>
+                </ul>
+            </div>
+        </div>
     <% } %>
     <div class="card m-auto" style="width: 50%">
         <div class="card-header">
