--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -8,12 +8,57 @@
     <title>Register</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400&display=swap" rel="stylesheet">
+    <style>
+        * {
+            font-family: 'Poppins', sans-serif;
+        }
+    </style>
 </head>
 <body>
-<%- include('partials/navbar', {isAuth})%>
+<%- include('partials/navbar', {isAuth}) %>
 
 <div class="container mt-4">
-
+    <form class="d-flex m-1" action="/" method="get">
+        <input class="form-control me-2" type="search" placeholder="Search by vaccine name" aria-label="Search"
+               name="name">
+        <button class="btn btn-outline-success" type="submit">Search</button>
+    </form>
+    <div class="row">
+        <div class="col-md-3">
+            <div class="card m-1">
+                <div class="card-header">
+                    <p class="card-title m-0">Sort by category</p>
+                </div>
+                <div class="card-body">
+                    <a href="/" class="card-text btn btn-outline-primary">All</a>
+                    <% categories.forEach(category => { %>
+                        <a href="/?category=<%= category.category %>"
+                           class="card-text btn btn-outline-primary"><%= category.category %></a>
+                    <% }) %>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-9">
+            <div class="row">
+                <% vaccines.forEach(vaccine => { %>
+                    <div class="card m-1" style="width: 20rem;">
+                        <div class="card-body">
+                            <h5 class="card-title fw-bold"><%= vaccine.category %> (<%= vaccine.name %>)</h5>
+                            <p class="card-text">
+                                <span>Stock: <%= vaccine.stock %></span><br>
+                                <span class="small text-danger">*Please bring identity card</span>
+                            </p>
+                            <a href="/users/appointment/<%= vaccine.id %>" class="btn btn-outline-primary">Make
+                                Appointment</a>
+                        </div>
+                    </div>
+                <% }) %>
+            </div>
+        </div>
+    </div>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
