QR-Code feature done

--- a/views/auth/users/login.ejs
+++ b/views/auth/users/login.ejs
@@ -24,7 +24,7 @@
     <% if(err){ %>
         <div class="card m-auto mb-4" style="width: 50%">
             <div class="card-body">
-                <ul>
+                <ul class="m-0">
                     <li class="text-danger"><%= err %></li>
                 </ul>
             </div>
@@ -33,7 +33,7 @@
     <% if(validation){ %>
         <div class="card m-auto mb-4" style="width: 50%">
             <div class="card-body">
-                <ul>
+                <ul class="m-0">
                     <li class="text-success"><%= validation %></li>
                 </ul>
             </div>
