--- a/views/auth/users/register.ejs
+++ b/views/auth/users/register.ejs
@@ -25,7 +25,7 @@
     <% if(err){ %>
         <div class="card m-auto mb-4" style="width: 50%">
             <div class="card-body">
-                <ul>
+                <ul class="m-0">
                     <% err.split(',').forEach(e => { %>
                         <li class="text-danger"><%= e %></li>
                     <% }) %>
