--- a/views/404.ejs
+++ b/views/404.ejs
@@ -5,7 +5,8 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Appoint QR-Code</title>
+    <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,15 +19,13 @@
     </style>
 </head>
 <body>
-<%- include('partials/navbar', {isAuth}) %>
-
 <div class="container mt-4">
     <div class="text-center">
-        <h1>Please screenshot and show this code to the officer</h1>
-        <img src="<%=url%>" class="img-fluid" alt="qr-code-image">
+        <h1>Cannot Find Page</h1>
+        <img src="https://img.freepik.com/free-vector/error-404-concept-illustration_114360-1811.jpg?w=1060&t=st=1660845336~exp=1660845936~hmac=90a615aa700ed6238cf24fd66ad9b9632b7500536e5d2f3c3e5f29c568578700"
+             class="img-fluid" alt="...">
     </div>
 </div>
-
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
