--- a/views/admins/formAddVaccine.ejs
+++ b/views/admins/formAddVaccine.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>User Register</title>
+    <title>Create Vaccine</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,10 +17,9 @@
         }
     </style>
 </head>
+
 <body>
-<%- include('../../users/partials/navbar', {isAuth}) %>
-
-
+<%- include('partials/navbar') %>
 <div class="container mt-4">
     <% if(err){ %>
         <div class="card m-auto mb-4" style="width: 50%">
@@ -33,27 +32,31 @@
             </div>
         </div>
     <% } %>
-
     <div class="card m-auto" style="width: 50%">
         <div class="card-header">
-            Form Register
+            Form Add Vaccine
         </div>
         <div class="card-body">
-            <form action="/users/register" method="POST">
+            <form action="/admins/vaccine/add" method="post">
                 <div class="mb-3">
-                    <label for="name" class="form-label">Name</label>
-                    <input type="text" class="form-control" id="name" placeholder="ex: John Doe" name="name">
+                    <label class="form-label" for="name">Name</label>
+                    <input class="form-control" type="text" id="name" name="name" placeholder="ex : Pfizer">
                 </div>
                 <div class="mb-3">
-                    <label for="email" class="form-label">Email address</label>
-                    <input type="email" class="form-control" id="email" placeholder="ex: john@example.com" name="email">
+                    <label class="form-label" for="stock">Stock</label>
+                    <input class="form-control" type="number" id="stock" name="stock" placeholder="ex: 100">
                 </div>
                 <div class="mb-3">
-                    <label for="password" class="form-label">Password</label>
-                    <input type="password" class="form-control" id="password" placeholder="ex: password123"
-                           name="password">
+                    <label class="form-label" for="category">Category</label>
+                    <select class="form-select" aria-label="Default select example" name="category" id="category">
+                        <% categories.forEach(category => { %>
+                            <option value="<%= category %>"><%= category %></option>
+                        <% }) %>
+                    </select>
+
                 </div>
-                <button type="submit" class="btn btn-outline-primary">Register</button>
+
+                <button class="btn btn-outline-primary">submit</button>
             </form>
         </div>
     </div>
