--- a/views/users/appointment.ejs
+++ b/views/users/appointment.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Register</title>
+    <title>Appointment</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -51,16 +51,16 @@
                         <td><%= appointment ? appointment.Vaccine.category : 'No appointment' %></td>
                         <td><%= appointment ? appointment.Vaccine.name : 'No appointment' %></td>
                         <td><%= appointment ? appointment.date : 'No appointment' %></td>
-                        <%if(appointment){%>
-                            <td><span class="badge bg-danger">Undone</span></td>
+                        <% if(appointment){ %>
+                            <td><span class="badge bg-danger"><%= appointment.formatStatus %></span></td>
 
-                        <%}else{%>
+                        <% }else{ %>
                             <td>No Appointment</td>
-                        <%}%>
+                        <% } %>
                         <td>
                             <% if(appointment){ %>
                                 <a href="/users/qrcode/<%= appointment.id %>"
-                                   class="btn btn-outline-success">QR-Code</a>
+                                   class="btn btn-outline-success" target="_blank">QR-Code</a>
                                 <a href="/users/appointment/destroy/<%= appointment.id %>"
                                    class="btn btn-outline-danger"
                                    onclick="return confirm('Are you sure want to cancel this appointment?')">Cancel</a>
@@ -98,9 +98,9 @@
                             <td><%= appointment.Vaccine.category %></td>
                             <td><%= appointment.Vaccine.name %></td>
                             <td><%= appointment.date %></td>
-                            <td><span class="badge bg-success">Done</span></td>
+                            <td><span class="badge bg-success"><%= appointment.formatStatus %></span></td>
                             <td><a href="/users/qrcode/<%= appointment.id %>"
-                                   class="btn btn-outline-success">QR-Code</a></td>
+                                   class="btn btn-outline-success" target="_blank">QR-Code</a></td>
                         </tr>
                     <% }) %>
                     </tbody>
