--- a/views/users/create.ejs
+++ b/views/users/create.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Register</title>
+    <title>Create Appointment</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -24,7 +24,7 @@
     <% if(err){ %>
         <div class="card m-auto mb-4" style="width: 50%">
             <div class="card-body">
-                <ul>
+                <ul class="m-0">
                     <% err.split(',').forEach(e => { %>
                         <li class="text-danger"><%= e %></li>
                     <% }) %>
