--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Register</title>
+    <title>Dashboard</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,6 +14,10 @@
     <style>
         * {
             font-family: 'Poppins', sans-serif;
+        }
+
+        li {
+            display: inline;
         }
     </style>
 </head>
@@ -33,11 +37,17 @@
                     <p class="card-title m-0">Sort by category</p>
                 </div>
                 <div class="card-body">
-                    <a href="/" class="card-text btn btn-outline-primary">All</a>
-                    <% categories.forEach(category => { %>
-                        <a href="/?category=<%= category.category %>"
-                           class="card-text btn btn-outline-primary"><%= category.category %></a>
-                    <% }) %>
+                    <ul class="m-0 p-0" style="list-style-type: none">
+                        <li class="mb-1"><a href="/" class="card-text btn btn-outline-primary">All</a></li>
+                        <% categories.forEach(category => { %>
+                            <li class="mb-1">
+                                <a href="/?category=<%= category.category %>"
+                                   class="card-text btn btn-outline-primary"><%= category.category %></a>
+                            </li>
+
+                        <% }) %>
+                    </ul>
+
                 </div>
             </div>
         </div>
